# fsdl-2022-weak-supervision-project

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  conda-environment.yml  docker-compose.dev.yml  docker-compose.nvidia.yml  docker-compose.override.yml  docker-compose.yml  environment.yml  pyproject.toml  requirements.in  requirements.txt  setup.py
app/: cli.py  config.py  data.py  deploy.py  model.py
cli/: deploy.py
docs/: main_diagram.drawio  main_diagram_simple.drawio
models/: README.md
notebooks/: Dockerfile  README.md  environment.yml  query_model_api.ipynb  requirements.txt  rubrix-active-learning.ipynb
notebooks/rubrix/: ag_news_dataset.ipynb
notebooks/rubrix/labeling_functions/: lf_rules_rubrix.pkl
services/api-serverless/: README.md
services/api-serverless/api/: Dockerfile  app.py
services/api-serverless/app/: Dockerfile
services/dashboard/: README.md
services/dashboard/src/: Dockerfile  poetry.toml
services/dashboard/src/app/: config.py  streamlit_app.py
services/jupyter/: README.md
services/jupyter/.jupyter/: jupyter_server_config.py
services/jupyter/src/: Dockerfile  environment.yml  pyproject.toml  requirements.txt
services/jupyter/src/.jupyter/: jupyter_server_config.py
services/jupyter/src/app/: cli.py  config.py  deploy.py  model.py  train_model.py
services/jupyter/src/app/model/: train_model.py
services/jupyter/src/notebooks/: query_model_api.ipynb  rubrix-active-learning-modal.ipynb
services/jupyter/src/notebooks/rubrix/: ag_news_dataset.ipynb  rubrix-active-learning-loop.ipynb  rubrix-active-learning-modal.ipynb  rubrix-active-learning-small-text.ipynb
services/lambda/: README.md
services/lambda/api/: Dockerfile  app.py  download_model_from_s3.py  requirements.txt
services/restapi/: README.md
services/restapi/src/: Dockerfile  prestart.sh  pyproject.toml
services/restapi/src/myapp/: cli.py  config.py  main.py  prestart.py
services/restapi/src/myapp/api/v1/: router.py
services/restapi/src/myapp/api/v1/endpoints/examples/: __init__.py  hello.py
services/rubrix-service/: README.md
services/rubrix/src/config/: .users.yaml
services/streamlit/: Dockerfile  Makefile  README.md  environment.yml  requirements.in  requirements.txt
services/streamlit-ui/src/: pyproject.toml
services/streamlit-ui/src/.streamlit/: config.toml
services/streamlit-ui/src/app/: app.py  config.py  streamlit_app.py
services/streamlit/.streamlit/: config.toml
services/streamlit/app/: streamlit_app.py
services/streamlit/src/: Dockerfile  pyproject.toml
services/streamlit/src/app/: cli.py  config.py  streamlit_app.py
weak-supervision/: README.md  environment.yml
weak-supervision/src/: ag_news_dataset.ipynb
