[tool.poetry]
authors = ["example <email@example.com", "example 2 <email2@example.com"]
description = "A rest API"
name = "fsdl-2022-weak-supervision-project-api"
version = "0.1.0"

[tool.poetry.scripts]
fsdl-project-cli = "myapp.cli:hello"


[tool.poetry.dependencies]
python = "~3.10.5"
inboard = {extras = ["fastapi"], version = "^0.28.1"}
pydantic = ">1.8,<1.10.0" # pinned because of spacy
typer = ">=0.3.0,<0.5.0" # pinned because of spacy
tenacity = "^8.0.1"
# matplotlib = "^3.5.3"
# numpy = "^1.23.3"
# pandas = "^1.4.4"
# pip = "^22.2.2"
# scikit-learn = "^1.1.2"
# snorkel = "^0.9.9"
# tensorflow = "^2.10.0"
# textblob = "^0.17.1"
# torch = "^1.12.1"
# spacy = "^3.4.1"

[tool.poetry.dev-dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
ipykernel = "^6.15.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.pytest.ini_options]
addopts = "-ra -q"
log_cli = true
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_level = "INFO"
minversion = "6.0"
testpaths = [
  "src/tests",
]

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
include = '\.pyi?$'
line-length = 79
target-version = ['py37']

[tool.isort]
line_length = 79
multi_line_output = 3
profile = "black"
